--- a/DATRAS/DESCRIPTION
+++ b/DATRAS/DESCRIPTION
@@ -2,10 +2,10 @@ Package: DATRAS
 Type: Package
 Title: Read and convert raw data obtained from
     http://datras.ices.dk/Data_products/Download/Download_Data_public.aspx
-Version: 1.0
-Date: 2010-06-03
+Version: 1.01
+Date: 2018-03-16
 Author: Kasper Kristensen and Casper Berg
-Maintainer: <kaskr@imm.dtu.dk>
+Maintainer: <kaskr@dtu.dk>
 Description: Read datras hydrographical data, length data
     and age data into single data structure. Convert length
     distributions by haul to age distrubutions by haul
