add icesDatras to imports

--- a/DATRAS/DESCRIPTION
+++ b/DATRAS/DESCRIPTION
@@ -15,7 +15,9 @@ Suggests:
     maps,
     mgcv,
     multicore,
-    maptools
+    maptools,
+Imports:
+    icesDatras
 License: GPL
 LazyLoad: yes
 Collate:
