--- a/DATRAS/NAMESPACE
+++ b/DATRAS/NAMESPACE
@@ -3,19 +3,38 @@
 S3method("$",DATRASraw)
 S3method("$<-",DATRASraw)
 S3method("[",DATRASraw)
+S3method(AIC,ALKmodel)
+S3method(anova,ALKmodel)
 S3method(as.data.frame,DATRASraw)
 S3method(c,DATRASraw)
 S3method(length,DATRASraw)
 S3method(plot,DATRASraw)
 S3method(points,DATRASraw)
+S3method(predict,ALKmodel)
 S3method(print,DATRASraw)
 S3method(subset,DATRASraw)
 S3method(summary,DATRASraw)
+export(NageByHaul)
+export(addNage)
 export(addSpatialData)
 export(addSpectrum)
+export(addWeightByHaul)
+export(bubblePlot)
+export(checkSpectrum)
+export(downloadExchange)
+export(fitALK)
+export(fitvbg)
 export(getDatrasExchange)
+export(icesSquare)
+export(icesSquare2coord)
 export(minus9toNA)
+export(plotALKfit)
+export(plotALKraw)
+export(plotVBG)
+export(rawALK)
+export(readExchange)
 export(readExchangeDir)
 export(readICES)
 export(renameDATRAS)
+export(weightAtAge)
 importFrom(icesDatras,getDATRAS)
